--- a/callsubmissionpython/static/styles.css
+++ b/callsubmissionpython/static/styles.css
@@ -1,16 +1,58 @@
 body {
-    background-color: #f8f9fa;
+    background-color: #0061ad;
 }
 
 h1 {
-    color: #343a40;
+    color: #ffffff;
 }
 
 .form-group label {
-    font-weight: bold;
+    font-weight: normal;
+    color: #ffffff; /* Added this line */
 }
 
 .btn-primary {
-    background-color: #007bff;
+    background-color: #85c559;
     border-color: #007bff;
+}
+
+.date-picker {
+    width: auto; /* Adjusts the width to fit the content */
+    max-width: 200px; /* You can set a specific max-width if needed */
+}
+
+.short-field {
+    width: auto;
+    max-width: 200px; /* Adjust this value as needed */
+}
+
+#sfiError {
+    font-size: 1.25em; /* Increase the font size */
+    font-weight: bold; /* Make the text bold */
+    color: #ff0000; /* Ensure the text color is easily noticeable */
+}
+
+.upload-button {
+    display: inline-block; /* Ensures the button doesn't stretch */
+    width: auto; /* Adjusts the width to fit the content */
+}
+
+.file-input::file-selector-button {
+    color: #000000; /* Changes the text color of the file input button */
+}
+
+.file-input {
+    color: #ffffff; /* Changes the text color of the file input status message */
+}
+
+.program-field {
+    width: auto;
+    max-width: 200px; /* Adjust this value as needed */
+    /*display: inline-block; /* Ensures the element doesn't stretch */
+}
+
+.session-field {
+    width: auto;
+    max-width: 200px; /* Adjust this value as needed */
+    /* display: inline-block; /* Ensures the element doesn't stretch */
 }
